[package]
name = "libnotcurses-sys"
version = "2.0.11"
authors = ["nick black <dankamongmen@gmail.com>"]
license = "Apache-2.0"
edition = "2018"
description = "Low-level Rust bindings for the notcurses C library."
documentation = "https://dankamongmen.github.io/notcurses/rustdoc/libnotcurses_sys/"
repository = "https://github.com/dankamongmen/notcurses"
homepage = "https://nick-black.com/dankwiki/index.php/Notcurses"
links = "notcurses"
build = "build/build.rs"
categories = [
	"external-ffi-bindings",
	"command-line-interface",
	"visualization",
	"multimedia",
	"rendering",
	]
keywords = ["tui", "cli", "terminal", "ncurses", "ffi"]

[dependencies]
libc = {version = "0.2.80", default-features = false}
cty = "0.2.1"

[build-dependencies]
bindgen = ">= 0.55.1"
pkg-config = ">= 0.3.18"

[dev-dependencies]
serial_test = ">= 0.5.0"
serial_test_derive = ">= 0.5.0"
