[package]
name = "libnotcurses-sys"
version = "2.2.8"
authors = [
    "nick black <dankamongmen@gmail.com>",
		"José Luis Cruz <joseluis@andamira.net>"
]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Low-level Rust bindings for the notcurses C library."
documentation = "https://dankamongmen.github.io/notcurses/rustdoc/libnotcurses_sys/"
repository = "https://github.com/dankamongmen/notcurses"
homepage = "https://nick-black.com/dankwiki/index.php/Notcurses"
readme = "./README.md"
links = "notcurses"
build = "build/build.rs"
categories = [
	"external-ffi-bindings",
	"command-line-interface",
	"visualization",
	"multimedia",
	"rendering",
	]
keywords = ["tui", "cli", "terminal", "ncurses", "ffi"]
include = ["build/", "examples/", "src/", "LICENSE-*", "README.md"]

[dependencies]
libc = { version = "^0.2.80", default-features = false }
cty = "^0.2.1"

[build-dependencies]
# https://github.com/rust-lang/rust-bindgen/blob/master/CHANGELOG.md#0551
# https://pkgs.org/search/?q=bindgen
bindgen = "^0.55.1"
pkg-config = "^0.3.18"

[dev-dependencies]
serial_test = "^0.5.0"
serial_test_derive = "^0.5.0"

rand = "^0.8"

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
#
[profile.release]
# opt-level = 0            # [0-*3 | s | z]
# lto = "fat"              # [*fat | thin]
# debug = 1                # [*0/false | 1 | 2/true]
# debug-assertions = true  # [*false | true]
