[package]
name = "libnotcurses-sys"
authors = ["nick black <dankamongmen@gmail.com>"]
license = "Apache-2.0"
description = "Low-level rust bindings for the notcurses C library."
repository = "https://github.com/dankamongmen/notcurses"
homepage = "https://nick-black.com/dankwiki/index.php/Notcurses"
version = "1.4.3"
links = "notcurses"
build = "build.rs"
edition = "2018"
categories = ["external-ffi-bindings"]
[dependencies]
libc = "0.2.66"
[build-dependencies]
bindgen = ">= 0.52.0"
cc = "1.0"
pkg-config = "0.3.17"
