[package]
name = "notcurses"
version = "1.3.4"
authors = ["nick black <dankamongmen@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Rust bindings for the notcurses C library."
repository = "https://github.com/dankamongmen/notcurses"
homepage = "https://nick-black.com/dankwiki/index.php/Notcurses"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libnotcurses-sys = "^1.3.4"
libc = "0.2.66"
libc-stdhandle = ">= 0.1.0"

[dev-dependencies]
all_asserts = ">= 1.0.0"
serial_test = ">= 0.4.0"
serial_test_derive = ">= 0.4.0"
