[package]
name = "notcurses"
version = "1.6.11"
authors = ["nick black <dankamongmen@gmail.com>"]
license = "Apache-2.0"
edition = "2018"
description = "Rust bindings for the notcurses C library."
repository = "https://github.com/dankamongmen/notcurses"
homepage = "https://nick-black.com/dankwiki/index.php/Notcurses"
categories = [
	"api-bindings",
	"command-line-interface",
	"visualization",
	"multimedia",
	"rendering",
	]
keywords = ["tui", "cli", "terminal", "ncurses"]

[dependencies]
libnotcurses-sys = "^1.6.11"
libc = "0.2.74"
libc-stdhandle = ">= 0.1.0"

[dev-dependencies]
all_asserts = ">= 1.0.0"
serial_test = ">= 0.4.0"
serial_test_derive = ">= 0.4.0"
