[package]
name = "colloquy"
version = "0.1.0"
authors = ["nick black <dankamongmen@gmail.com>"]
edition = "2018"
repository = "https://github.com/dankamongmen/notcurses"
license = "Apache-2.0"
description = "Notcurses-based utility for command-line TUI widgets"
homepage = "https://nick-black.com/dankwiki/index.php/Notcurses"

[dependencies]
libc = ">= 0.2.66"
libnotcurses-sys = ">= 1.2.3"

[dependencies.clap]
version = ">= 2.33.0"
default-features = false
features = ["yaml", "color", "suggestions"]
